# kb-qa

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
config/: azure_config.yaml
src/dresokb/: __init__.py  __main__.py  cli.py
src/dresokb/generators/: __init__.py  qa_generator.py  refinement.py
src/dresokb/models/: __init__.py  azure_client.py  qa_models.py  qa_progress.py
src/dresokb/processors/: __init__.py  base_processor.py  pdf_processor.py
src/dresokb/utils/: __init__.py  file_handler.py
src/dresokb2/: __init__.py  __main__.py  extractors.py  models.py  pdf_processor.py  quality.py  utils.py
tests/: __init__.py  test_cli.py  test_dresokb2.py  test_utils.py
tests/e2e/: test_pipeline.py
tests/unit/: __init__.py  test_azure_client.py  test_base_processor.py  test_file_handler.py  test_qa_generator.py
